@@ -34,9 +34,9 @@
 ############################################################################
 
 TOPDIR := ${shell pwd | sed -e 's/ /\\ /g'}
--include ${TOPDIR}/.config
-include ${TOPDIR}/tools/Config.mk
--include ${TOPDIR}/Make.defs
+-include $(TOPDIR)/.config
+include $(TOPDIR)/tools/Config.mk
+-include $(TOPDIR)/Make.defs
 
 # Control build verbosity
 
